@@ -9,9 +9,6 @@ around to it some time. If you have any good ideas, please let me know.
 
 * Allow tar to create archives with sockets, devices, and other special files
 * Add in a mini insmod, rmmod, lsmod
-* Change init so halt, reboot (and poweroff) work with an initrd
-    when init is not PID 1
-* poweroff
 * mkfifo
 * dnsdomainname
 * traceroute/nslookup/netstat
@@ -22,7 +19,7 @@ around to it some time. If you have any good ideas, please let me know.
 * sort/uniq
 * wc
 * tr
-* expr (maybe)?  (ash builtin?)
+* expr (maybe?)  (ash builtin?)
 * login/sulogin/passwd/getty  (These are actully now part of tinylogin, which 
                                 I've just started to maintain).
 
