@@ -27,5 +27,5 @@ extern int
 reboot_main(int argc, char ** argv)
 {
     /* don't assume init's pid == 1 */
-    exit( kill(findInitPid(), SIGUSR2));
+    exit( kill(findInitPid(), SIGINT));
 }
