@@ -12,8 +12,10 @@
 	* kill now behaves itself properly, added 'kill -l' to list signals
 	* 'ls -l' was failing on long directories, since my_getid was leaking 
 	    one file descriptor per file.  Oops.
-	* Fixed rebooting from init.  I'd left some debugging code in
+	* Fixed rebooting from init.  I'd accidently left some debugging code in
 	    which blocked reboots.
+	* Fixed reboot, halt (and added poweroff) such that they handle it when
+	    init is not at PID 1 (like when running in an initrd).
 	* Added a prelinary du implementation.  Some parameter parsing
 	    stuff still needs to be added. -beppu  (John Beppu <beppu@lineo.com>)
 	* Implemented tee.  -beppu
